--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -33,7 +33,7 @@
    --ifm-spacing-horizontal: 2rem;
  }
  
- /* For readability concerns, you should choose a lighter palette in dark mode. */
+ /* Dark mode palette adjustments for better readability */
  [data-theme='dark'] {
    --ifm-color-primary: #25c2a0;
    --ifm-color-primary-dark: #21af90;
@@ -45,87 +45,85 @@
    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
  }
  
- /* Custom Footer Styling */
-/* Custom Footer Styling */
-/* Custom Footer Styling */
-.footer {
-  background-color: var(--ifm-footer-background-color);
-  padding: 20px 0;
-  border-top: 1px solid rgba(132, 132, 132, 0.2);
-}
-
-.container.container-fluid {
-  display: flex;
-  justify-content: space-between; /* Распределяет элементы по всей ширине */
-  align-items: center; /* Центрирует элементы по вертикали */
-  flex-wrap: wrap;
-}
-
-.footer__links {
-  display: flex;
-  justify-content: space-between; /* Распределяет элементы внутри футера */
-  align-items: center;
-  width: 100%; /* Занимает всю ширину контейнера */
-}
-
-.footer__col,
-.footer__col-right {
-  flex: 1;
-  text-align: center; /* Центрирует текст внутри колонок */
-}
-
-.footer__title {
-  margin-bottom: 10px;
-  color: #fff;
-  font-weight: bold;
-}
-
-.footer__items {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-}
-
-.footer__item {
-  margin-bottom: 5px;
-}
-
-.footer__link-item {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-.footer__bottom {
-  text-align: center;
-  width: 100%; /* Копирайт занимает всю ширину */
-  margin-top: 10px;
-}
-
-.footer__copyright {
-  padding-bottom: 10px;
-}
-
-@media (max-width: 768px) {
-  .container.container-fluid {
-    flex-direction: column;
-    gap: 10px; /* Уменьшение отступов для мобильных устройств */
-  }
-
-  .footer__col,
-  .footer__col-right {
-    text-align: center;
-    flex: 0 1 100%; /* Центрирование и расширение на всю ширину */
-  }
-
-  .footer__copyright {
-    margin-top: 5px;
-    padding-bottom: 5px;
-  }
-}
-
-
+ /* Footer Styling */
+ .footer {
+   background-color: var(--ifm-footer-background-color);
+   padding: 20px 0;
+   border-top: 1px solid rgba(132, 132, 132, 0.2);
+ }
  
+ .container.container-fluid {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   flex-wrap: wrap;
+ }
+ 
+ .footer__links {
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   width: 100%;
+ }
+ 
+ .footer__col,
+ .footer__col-right {
+   flex: 1;
+   text-align: center;
+ }
+ 
+ .footer__title {
+   margin-bottom: 10px;
+   color: #fff;
+   font-weight: bold;
+ }
+ 
+ .footer__items {
+   list-style-type: none;
+   padding: 0;
+   margin: 0;
+ }
+ 
+ .footer__item {
+   margin-bottom: 5px;
+ }
+ 
+ .footer__link-item {
+   color: #fff;
+   text-decoration: none;
+   font-weight: bold;
+ }
+ 
+ .footer__bottom {
+   text-align: center;
+   width: 100%;
+   margin-top: 10px;
+ }
+ 
+ .footer__copyright {
+   padding-bottom: 10px;
+ }
+ 
+ /* Mobile view adjustments */
+ @media (max-width: 768px) {
+   .container.container-fluid {
+     flex-direction: column;
+     gap: 10px;
+   }
+ 
+   .footer__col,
+   .footer__col-right {
+     text-align: center;
+     flex: 0 1 100%;
+   }
+ 
+   .footer__copyright {
+     margin-top: 5px;
+     padding-bottom: 5px;
+   }
+ }
+ 
+ /* Main content hero adjustments */
  .main-wrapper .hero--primary {
    --ifm-hero-background-color: none;
    color: var(--ifm-font-color-base);
@@ -304,7 +302,7 @@
  }
  
  .menu__list .api-menu-item .menu__list-item-collapsible--active + .menu__list {
-   display: block !important;
+   display:block !important;
    height: auto !important;
  }
  
@@ -336,7 +334,7 @@
    > span:first-child {
      display: inline-block;
      width: 65px;
-     text-align: center;
+     text-align:center;
    }
  }
  
@@ -360,12 +358,12 @@
  }
  
  .rounded-image {
-   border-radius: 10px; /* Закругление углов */
+   border-radius: 10px;
  }
  
  .rounded-div {
    display: flex;
    justify-content: center;
-   clip-path: inset(0 0 0 0 round 10px); /* Закругленные углы */
+   clip-path: inset(0 0 0 0 round 10px);
  }
  
