--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -4,366 +4,359 @@
  * work well for content-centric websites.
  */
 
- @import url('https://fonts.googleapis.com/css?family=Inter:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Inter:400,700&display=swap');
+@import './output.css';
+@import './heading.scss';
 
- /* Override default Infima variables */
- :root {
-   --ifm-color-primary: #2f80ed;
-   --ifm-color-primary-dark: #1366d6;
-   --ifm-color-primary-darker: #1366d6;
-   --ifm-color-primary-darkest: #1366d6;
-   --ifm-color-primary-light: #33925d;
-   --ifm-color-primary-lighter: #359962;
-   --ifm-color-primary-lightest: #3cad6e;
-   --ifm-code-font-size: 95%;
-   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-   --ifm-font-size-base: 16px;
-   --ifm-font-family-base: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI,
-     Helvetica, Arial, sans-serif;
-   --ifm-font-family-monospace: system-ui, -apple-system, Segoe UI, Roboto,
-     Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI',
-     Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
-     'Segoe UI Symbol';
-   --ifm-font-color-base: #23262f;
-   --ifm-font-color-subtle: #777e90;
-   --ifm-button-font-weight: 500;
-   --ifm-background-surface-color: #f9f9f9;
-   --ifm-breadcrumb-spacing: 2px;
-   --ifm-footer-background-color: #f9f9f9;
-   --ifm-spacing-horizontal: 2rem;
- }
- 
- /* Dark mode palette adjustments for better readability */
- [data-theme='dark'] {
-   --ifm-color-primary: #25c2a0;
-   --ifm-color-primary-dark: #21af90;
-   --ifm-color-primary-darker: #1fa588;
-   --ifm-color-primary-darkest: #1a8870;
-   --ifm-color-primary-light: #29d5b0;
-   --ifm-color-primary-lighter: #32d8b4;
-   --ifm-color-primary-lightest: #4fddbf;
-   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
- }
- 
- /* Footer Styling */
- .footer {
-   background-color: var(--ifm-footer-background-color);
-   padding: 20px 0;
-   border-top: 1px solid rgba(132, 132, 132, 0.2);
- }
- 
- .container.container-fluid {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   flex-wrap: wrap;
- }
- 
- .footer__links {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
-   width: 100%;
- }
- 
- .footer__col,
- .footer__col-right {
-   flex: 1;
-   text-align: center;
- }
- 
- .footer__title {
-   margin-bottom: 10px;
-   color: #fff;
-   font-weight: bold;
- }
- 
- .footer__items {
-   list-style-type: none;
-   padding: 0;
-   margin: 0;
- }
- 
- .footer__item {
-   margin-bottom: 5px;
- }
- 
- .footer__link-item {
-   color: #fff;
-   text-decoration: none;
-   font-weight: bold;
- }
- 
- .footer__bottom {
-   text-align: center;
-   width: 100%;
-   margin-top: 10px;
- }
- 
- .footer__copyright {
-   padding-bottom: 10px;
- }
- 
- /* Mobile view adjustments */
- @media (max-width: 768px) {
-   .container.container-fluid {
-     flex-direction: column;
-     gap: 10px;
-   }
- 
-   .footer__col,
-   .footer__col-right {
-     text-align: center;
-     flex: 0 1 100%;
-   }
- 
-   .footer__copyright {
-     margin-top: 5px;
-     padding-bottom: 5px;
-   }
- }
- 
- /* Main content hero adjustments */
- .main-wrapper .hero--primary {
-   --ifm-hero-background-color: none;
-   color: var(--ifm-font-color-base);
- }
- 
- #__docusaurus .menu {
-   padding-top: 1rem;
-   padding-bottom: 5rem;
- }
- 
- #__docusaurus .menu__link {
-   font-size: 0.813rem;
- }
- 
- #__docusaurus .menu__list-item-collapsible .menu__link {
-   font-size: 0.938rem;
-   font-weight: 600;
- }
- 
- #__docusaurus .theme-doc-sidebar-item-category > div {
-   flex-direction: row-reverse;
- }
- 
- #__docusaurus .menu__caret:before {
-   background: var(--ifm-menu-link-sublist-icon) 50% / 1.5rem 1.5rem;
- }
- 
- .theme-doc-sidebar-menu > .theme-doc-sidebar-item-category:not(:first-child) {
-   margin-top: 1.25rem;
- }
- 
- .hero--primary {
-   padding-top: 8rem;
-   padding-bottom: 5rem;
- }
- 
- .current-version {
-   background-color: #292d3e;
-   padding: 0px 8px;
- }
- 
- @import './output.css';
- @import './heading.scss';
- 
- body {
-   font-family: var(--ifm-font-family-base);
-   background-color: #f9f9f9;
- }
- 
- body .hero__title {
-   font-size: 29px;
-   line-height: 100%;
-   letter-spacing: -0.022em;
- }
- 
- @media (min-width: 436px) {
-   body .hero__title {
-     font-size: 38px;
-   }
- }
- 
- @media (min-width: 1024px) {
-   body .hero__title {
-     font-size: 60px;
-     letter-spacing: -0.032em;
-     line-height: 100%;
-   }
- }
- 
- body .hero__subtitle {
-   font-size: inherit;
- }
- 
- body .button {
-   display: inline-block;
-   border-radius: 5px;
-   padding: 14px 22px;
-   color: #fff;
-   border: none;
-   outline: none;
-   text-decoration: none;
-   font-size: 16px;
-   line-height: 1.5;
-   font-weight: 500;
-   text-align: center;
-   vertical-align: top;
-   cursor: pointer;
-   overflow: hidden;
-   -webkit-backface-visibility: hidden;
-   backface-visibility: hidden;
-   letter-spacing: normal !important;
-   position: relative;
-   white-space: nowrap;
-   transform: translate3d(0, 0, 0);
-   -webkit-appearance: none;
-   transition: 0.3s;
-   -webkit-user-select: none !important;
-   -moz-user-select: none !important;
-   -ms-user-select: none !important;
-   user-select: none !important;
- }
- 
- body .button--secondary {
-   border: 1px solid rgba(0, 0, 0, 0.11);
-   padding-top: 13px;
-   padding-bottom: 13px;
-   background: #fff;
-   color: #161616;
- }
- 
- .card {
-   background: white;
-   color: #23222a;
-   border-radius: 16px;
- }
- 
- .card:hover {
-   box-shadow: rgb(0 0 0 / 15%) 0px 4px 12px -4px;
- }
- 
- .pointer-events-none {
-   pointer-events: none;
- }
- 
- body code {
-   font-family: monospace !important;
- }
- 
- main[class*='docMainContainer'] .container {
-   padding-left: 30px;
-   padding-right: 30px;
- }
- 
- .navbar__logo {
-   height: 2.3rem;
- }
- 
- * {
-   border-style: solid;
-   border-width: 0;
- }
- 
- body .footer {
-   padding-left: 0;
-   padding-right: 0;
- }
- 
- img {
-   max-width: 100%;
-   height: auto;
- }
- 
- .navbar__item.navbar__link svg,
- .menu__link svg {
-   display: none;
- }
- 
- .navbar__item.navbar__link.button,
- .menu__link.button {
-   padding: 0.5rem 1rem;
-   margin-left: 0.5rem;
- }
- 
- .navbar__item.navbar__link.button:hover {
-   color: #fff;
- }
- 
- @media (max-width: 996px) {
-   .navbar__item.navbar__link.button {
-     display: none;
-   }
- }
- 
- .menu__list .api-menu-item .menu__list-item-collapsible + .menu__list {
-   display: none !important;
- }
- 
- .menu__list .api-menu-item .menu__list-item-collapsible--active + .menu__list {
-   display:block !important;
-   height: auto !important;
- }
- 
- button.menu__caret {
-   display: none;
- }
- 
- .menu__link.menu__link--sublist:after {
-   content: '';
-   margin-left: auto;
-   min-width: 1rem;
-   background: var(--ifm-menu-link-sublist-icon) 50% / 1rem 1rem;
-   filter: var(--ifm-menu-link-sublist-icon-filter);
-   height: 1rem;
-   transform: rotate(180deg);
-   width: 1rem;
-   transition: transform var(--ifm-transition-fast) linear;
- }
- 
- .menu__link--sublist.menu__link--active:after,
- .menu__list-item--collapsed .menu__caret:before {
-   transform: rotateZ(90deg);
- }
- 
- .menu__link {
-   > span {
-     padding-left: 10px;
-   }
-   > span:first-child {
-     display: inline-block;
-     width: 65px;
-     text-align:center;
-   }
- }
- 
- .hero-image {
-   mask-image: linear-gradient(180deg, #fff 60%, transparent);
-   -webkit-mask-image: linear-gradient(180deg, #fff 60%, transparent);
- }
- 
- .screen-reader-only {
-   clip: rect(0 0 0 0);
-   border: 0;
-   -webkit-clip-path: polygon(0 0, 0 0, 0 0);
-   clip-path: polygon(0 0, 0 0, 0 0);
-   height: 1px;
-   margin: -1px;
-   overflow: hidden;
-   padding: 0;
-   position: absolute;
-   white-space: nowrap;
-   width: 1px;
- }
- 
- .rounded-image {
-   border-radius: 10px;
- }
- 
- .rounded-div {
-   display: flex;
-   justify-content: center;
-   clip-path: inset(0 0 0 0 round 10px);
- }
- 
+/* Override default Infima variables */
+:root {
+  --ifm-color-primary: #2f80ed;
+  --ifm-color-primary-dark: #1366d6;
+  --ifm-color-primary-darker: #1366d6;
+  --ifm-color-primary-darkest: #1366d6;
+  --ifm-color-primary-light: #33925d;
+  --ifm-color-primary-lighter: #359962;
+  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-code-font-size: 95%;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-size-base: 16px;
+  --ifm-font-family-base: 'Inter', -apple-system, BlinkMacSystemFont, Segoe UI,
+    Helvetica, Arial, sans-serif;
+  --ifm-font-family-monospace: system-ui, -apple-system, Segoe UI, Roboto,
+    Ubuntu, Cantarell, Noto Sans, sans-serif, BlinkMacSystemFont, 'Segoe UI',
+    Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol';
+  --ifm-font-color-base: #23262f;
+  --ifm-font-color-subtle: #777e90;
+  --ifm-button-font-weight: 500;
+  --ifm-background-surface-color: #f9f9f9;
+  --ifm-breadcrumb-spacing: 2px;
+  --ifm-footer-background-color: #f9f9f9;
+  --ifm-spacing-horizontal: 2rem;
+}
+
+[data-theme='dark'] {
+  --ifm-color-primary: #25c2a0;
+  --ifm-color-primary-dark: #21af90;
+  --ifm-color-primary-darker: #1fa588;
+  --ifm-color-primary-darkest: #1a8870;
+  --ifm-color-primary-light: #29d5b0;
+  --ifm-color-primary-lighter: #32d8b4;
+  --ifm-color-primary-lightest: #4fddbf;
+  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+.footer {
+  background-color: var(--ifm-footer-background-color);
+  padding: 20px 0;
+  border-top: 1px solid rgba(132, 132, 132, 0.2);
+}
+
+.container.container-fluid {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.footer__links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.footer__col,
+.footer__col-right {
+  flex: 1;
+  text-align: center;
+}
+
+.footer__title {
+  margin-bottom: 10px;
+  color: #fff;
+  font-weight: bold;
+}
+
+.footer__items {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.footer__item {
+  margin-bottom: 5px;
+}
+
+.footer__link-item {
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer__bottom {
+  text-align: center;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.footer__copyright {
+  padding-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+  .container.container-fluid {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .footer__col,
+  .footer__col-right {
+    text-align: center;
+    flex: 0 1 100%;
+  }
+
+  .footer__copyright {
+    margin-top: 5px;
+    padding-bottom: 5px;
+  }
+}
+
+.main-wrapper .hero--primary {
+  --ifm-hero-background-color: none;
+  color: var(--ifm-font-color-base);
+}
+
+#__docusaurus .menu {
+  padding-top: 1rem;
+  padding-bottom: 5rem;
+}
+
+#__docusaurus .menu__link {
+  font-size: 0.813rem;
+}
+
+#__docusaurus .menu__list-item-collapsible .menu__link {
+  font-size: 0.938rem;
+  font-weight: 600;
+}
+
+#__docusaurus .theme-doc-sidebar-item-category > div {
+  flex-direction: row-reverse;
+}
+
+#__docusaurus .menu__caret:before {
+  background: var(--ifm-menu-link-sublist-icon) 50% / 1.5rem 1.5rem;
+}
+
+.theme-doc-sidebar-menu > .theme-doc-sidebar-item-category:not(:first-child) {
+  margin-top: 1.25rem;
+}
+
+.hero--primary {
+  padding-top: 8rem;
+  padding-bottom: 5rem;
+}
+
+.current-version {
+  background-color: #292d3e;
+  padding: 0px 8px;
+}
+
+body {
+  font-family: var(--ifm-font-family-base);
+  background-color: #f9f9f9;
+}
+
+body .hero__title {
+  font-size: 29px;
+  line-height: 100%;
+  letter-spacing: -0.022em;
+}
+
+@media (min-width: 436px) {
+  body .hero__title {
+    font-size: 38px;
+  }
+}
+
+@media (min-width: 1024px) {
+  body .hero__title {
+    font-size: 60px;
+    letter-spacing: -0.032em;
+    line-height: 100%;
+  }
+}
+
+body .hero__subtitle {
+  font-size: inherit;
+}
+
+body .button {
+  display: inline-block;
+  border-radius: 5px;
+  padding: 14px 22px;
+  color: #fff;
+  border: none;
+  outline: none;
+  text-decoration: none;
+  font-size: 16px;
+  line-height: 1.5;
+  font-weight: 500;
+  text-align: center;
+  vertical-align: top;
+  cursor: pointer;
+  overflow: hidden;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  letter-spacing: normal !important;
+  position:relative;
+  white-space: nowrap;
+  transform: translate3d(0, 0, 0);
+  -webkit-appearance: none;
+  transition: 0.3s;
+  -webkit-user-select: none !important;
+  -moz-user-select: none !important;
+  -ms-user-select: none !important;
+  user-select: none !important;
+}
+
+body .button--secondary {
+  border: 1px solid rgba(0, 0, 0, 0.11);
+  padding-top: 13px;
+  padding-bottom: 13px;
+  background: #fff;
+  color: #161616;
+}
+
+.card {
+  background: white;
+  color: #23222a;
+  border-radius: 16px;
+}
+
+.card:hover {
+  box-shadow: rgb(0 0 0 / 15%) 0px 4px 12px -4px;
+}
+
+.pointer-events-none {
+  pointer-events: none;
+}
+
+body code {
+  font-family: monospace !important;
+}
+
+main[class*='docMainContainer'] .container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.navbar__logo {
+  height: 2.3rem;
+}
+
+* {
+  border-style: solid;
+  border-width: 0;
+}
+
+body .footer {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.navbar__item.navbar__link svg,
+.menu__link svg {
+  display: none;
+}
+
+.navbar__item.navbar__link.button,
+.menu__link.button {
+  padding: 0.5rem 1rem;
+  margin-left: 0.5rem;
+}
+
+.navbar__item.navbar__link.button:hover {
+  color: #fff;
+}
+
+@media (max-width: 996px) {
+  .navbar__item.navbar__link.button {
+    display: none;
+  }
+}
+
+.menu__list .api-menu-item .menu__list-item-collapsible + .menu__list {
+  display: none !important;
+}
+
+.menu__list .api-menu-item .menu__list-item-collapsible--active + .menu__list {
+  display:block !important;
+  height: auto !important;
+}
+
+button.menu__caret {
+  display:none;
+}
+
+.menu__link.menu__link--sublist:after {
+  content: '';
+  margin-left: auto;
+  min-width: 1rem;
+  background: var(--ifm-menu-link-sublist-icon) 50% / 1rem 1rem;
+  filter: var(--ifm-menu-link-sublist-icon-filter);
+  height: 1rem;
+  transform: rotate(180deg);
+  width: 1rem;
+  transition: transform var(--ifm-transition-fast) linear;
+}
+
+.menu__link--sublist.menu__link--active:after,
+.menu__list-item--collapsed .menu__caret:before {
+  transform: rotateZ(90deg);
+}
+
+.menu__link > span {
+  padding-left: 10px;
+}
+
+.menu__link > span:first-child {
+  display: inline-block;
+  width: 65px;
+  text-align:center;
+}
+
+.hero-image {
+  mask-image: linear-gradient(180deg, #fff 60%, transparent);
+  -webkit-mask-image: linear-gradient(180deg, #fff 60%, transparent);
+}
+
+.screen-reader-only {
+  clip: rect(0 0 0 0);
+  border: 0;
+  -webkit-clip-path: polygon(0 0, 0 0, 0 0);
+  clip-path: polygon(0 0, 0 0, 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+.rounded-image {
+  border-radius: 10px;
+}
+
+.rounded-div {
+  display: flex;
+  justify-content: center;
+  clip-path: inset(0 0 0 0 round 10px);
+}
